Add dark mode support to ui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "packages/thirdweb-hooks",
     "packages/web3-utils",
     "packages/repositories"
-  ]
+  ],
+  "dotenv.enableAutocloaking": false
 }
