--- a/packages/repositories/package.json
+++ b/packages/repositories/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "backend-utils": "*",
     "mongoose": "^6.5.2",
     "nanoid": "^4.0.0",
     "local-types": "*"
