--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,18 +6,20 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next && rm -rf node_modules && rm -rf .turbo"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
-    "@thirdweb-dev/react": "^2.6.5",
-    "@thirdweb-dev/sdk": "^2.3.38",
+    "@headlessui/react": "1.7.4",
+    "@thirdweb-dev/react": "2.6.5",
+    "@thirdweb-dev/sdk": "2.3.38",
     "ethers": "^5.7.0",
-    "next": "12.2.3",
+    "next": "12.3.4",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ui": "*"
+    "ui": "*",
+    "web3-ui": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
