--- a/packages/backend-utils/package.json
+++ b/packages/backend-utils/package.json
@@ -4,7 +4,13 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "type": "module",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "license": "MIT",
   "files": [
     "dist/**"
@@ -16,15 +22,15 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "7.32.0",
     "eslint-config-custom-node-ts": "*",
     "tsconfig": "*",
-    "tsup": "^6.2.2",
-    "typescript": "^4.5.2"
+    "tsup": "6.2.2",
+    "typescript": "4.5.2"
   },
   "dependencies": {
-    "mongoose": "^6.5.2",
-    "nanoid": "^4.0.0",
+    "mongoose": "6.5.2",
+    "nanoid": "4.0.0",
     "local-types": "*"
   }
 }
