--- a/packages/tw-config/package.json
+++ b/packages/tw-config/package.json
@@ -8,6 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "@tailwindcss/forms": "0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0"
+    "@tailwindcss/line-clamp": "0.4.0"
   }
 }
