--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,13 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"      
+    }
+  },
   "files": [
     "dist/**"
   ],
@@ -15,20 +22,20 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "eslint": "^7.32.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "eslint": "7.32.0",
     "eslint-config-custom-react-ts": "*",
     "tsconfig": "*",
-    "tsup": "^6.2.2",
+    "tsup": "6.2.2",
     "tw-config": "*",
-    "typescript": "^4.5.2"
+    "typescript": "4.5.2"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
-    "@heroicons/react": "^1.0.6",
-    "clsx": "^1.2.1",
-    "framer-motion": "^7.2.0",
-    "react": "^17.0.2"
+    "@headlessui/react": "1.7.4",
+    "@heroicons/react": "1.0.6",
+    "clsx": "1.2.1",
+    "framer-motion": "6.5.1",
+    "react": "17.0.2"
   }
 }
