--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -4,8 +4,14 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "type": "module",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"      
+    }
+  },
   "files": [
     "dist/**"
   ],
@@ -16,11 +22,11 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "7.32.0",
     "eslint-config-custom-node-ts": "*",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "tsconfig": "*",
-    "tsup": "^6.2.2",
-    "typescript": "^4.5.2"
+    "tsup": "6.2.2",
+    "typescript": "4.5.2"
   }
 }
