Fix thirdweb dependencies

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.4",
-    "@thirdweb-dev/react": "2.6.5",
-    "@thirdweb-dev/sdk": "2.3.38",
-    "ethers": "^5.7.0",
+    "@thirdweb-dev/react": "3.6.2",
+    "@thirdweb-dev/sdk": "3.6.2",
+    "ethers": "5.7.2",
     "next": "12.3.4",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
